--- a/responsive-portfolio/css/styles.css
+++ b/responsive-portfolio/css/styles.css
@@ -14,7 +14,7 @@ html {
     background-color: rgba(255, 107, 26, 1);
 }
 .header-block {
-    width:375px;
+    width:100%;
     height: 130px;
     color: rgba(255, 255, 255, 1);
     padding: 3rem;
@@ -24,25 +24,32 @@ html {
     align-items: center;
     gap: 0.5rem;
 }
+.header-up {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
 .header-up .header-logo img{
-padding: 0 12px;
+display: flex;
+align-items: center;
 }
 .header-text-1{
 font-weight: 700;
 font-style: Bold;
 font-size: 2.4rem;
-line-height: 100%;
+line-height: 1;
 letter-spacing: 0%;
+
 }
 .header-text-2 {
-    width: 100%;
 font-weight: 500;
 font-style: Medium;
 font-size: 1.4rem;
 line-height: 100%;
 letter-spacing: 0%;
 color: rgba(255, 255, 255, 0.9);
-margin-left: 15%;
 }
 .navbar{
     background-color: rgba(26, 26, 26, 1);
@@ -71,8 +78,7 @@ height: 14px;
 opacity: 1;
 }
 .nav-links{
-visibility: hidden;
-
+display: none;
 }
 
 .welcome-card {
@@ -203,3 +209,87 @@ align-items: center;
 color: rgba(255, 255, 255, 1);
 }
 
+ @media (min-width: 768px) {
+.header-block {
+    height: 260px;
+}
+.header-text-1 {
+    font-size: 40px;
+}
+.header-text-2 {
+    font-size: 18px;
+}
+.header-block .header-up {
+/*aq unda iyos logos gasworeba da zeda da qveda xazebis ertmanettan left gasworeba*/
+}
+.header-block {
+gap: 15px;
+}
+.header-up .header-logo img {
+    width: 58px;
+    height: 48px;
+}
+.welcome-card {
+    height: 530px;
+}
+.welcome-card-text .upper-text {
+    font-size: 48px;
+}
+.welcome-card-text .below-text {
+    font-size: 18px;
+}
+.welcome-card .background-image {
+width: 70%;
+height: 70%;
+ }
+ .navbar {
+    height: 60px;
+ }
+ .navbar .menu {
+    display: none;
+ }
+ .navbar .nav-links {
+   height: 60px;
+   width: 100%;
+    background-color: rgba(26, 26, 26, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    font-size: 17px;
+ }
+ .nav-links li a {
+  font-weight: 500;
+font-style: Medium;
+font-size: 17px;
+line-height: 100%;
+letter-spacing: 0%;
+text-decoration: none;
+color: rgba(255, 255, 255, 1);
+ }
+ .nav-links li a:hover {
+  
+    background-color: rgba(255, 107, 26, 1);
+    border-radius: 8px;
+    text-align: center;
+    display: inline-block;
+    padding: 8px 13px;
+    transition-timing-function:ease;
+    transition-delay:0.2s ;
+ }
+ .techniques {
+    display: grid;
+    grid-template-columns: repeat(2, 324px);
+    justify-items: center;
+    justify-content: center;
+ }
+ 
+}
+@media(min-width: 1100px){
+ .techniques {
+    display: grid;
+    grid-template-columns: repeat(3, 324px);
+    justify-items: center;
+    justify-content: center;
+ }
+}
